fix overflow of the label in the meta container

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -5048,6 +5048,12 @@ $min2ColWidth: 400px;
       @include right(0);
     }
   }
+
+  .label {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .body {
